[package]
name = "nacha"
version = "0.1.0"
edition = "2021"
authors = ["Leejay Hsu <leejayhsu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to parse NACHA files"
readme = "README.md"
homepage = "https://github.com/leejayhsu/nacha"
repository = "https://github.com/leejayhsu/nacha"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.6", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
