[package]
name = "nacha"
version = "0.10.0"
edition = "2021"
authors = ["Leejay Hsu <leejayhsu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to parse NACHA files"
readme = "README.md"
homepage = "https://github.com/leejayhsu/nacha"
repository = "https://github.com/leejayhsu/nacha"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.58"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.2.6", features = ["derive"] }
crossterm = "0.23.2"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.24"
thousands = "0.2.0"
tui = { version = "0.18.0", features = ["crossterm"] }
